Validation - Error Handling - *.rest
