# swagger.json
@@ -24,12 +24,23 @@
         }
       }
     },
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/employees/": {
       "get": {
         "tags": [
-          "Employees"
+          "Employees",
+          "Books"
         ],
-        "summary": "Get all employees",
+        "summary": "List all the employees",
         "description": "",
         "produces": [
           "application/json"
@@ -44,52 +55,11 @@
         "tags": [
           "Employees"
         ],
-        "summary": "Add an employee",
+        "summary": "Create a new employee",
         "description": "Enter the employee information in the body template provided, employeeID is created automatically.",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "address": {
-                  "example": "any"
-                },
-                "phoneNumber": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "birthday": {
-                  "example": "any"
-                },
-                "jobTitle": {
-                  "example": "any"
-                },
-                "department": {
-                  "example": "any"
-                },
-                "salary": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
         "responses": {
           "201": {
             "description": "Created"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
@@ -99,7 +69,7 @@
         "tags": [
           "Employees"
         ],
-        "summary": "Get a single employee using employee id",
+        "summary": "Get the employee by ID",
         "description": "Enter the Employee ID.",
         "produces": [
           "application/json"
@@ -122,7 +92,7 @@
         "tags": [
           "Employees"
         ],
-        "summary": "Change employee information",
+        "summary": "Update employee information by ID",
         "description": "Enter the Employee ID and any necessary changes in the body template provided.",
         "parameters": [
           {
@@ -130,53 +100,11 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "address": {
-                  "example": "any"
-                },
-                "phoneNumber": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "birthday": {
-                  "example": "any"
-                },
-                "jobTitle": {
-                  "example": "any"
-                },
-                "department": {
-                  "example": "any"
-                },
-                "salary": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
           "204": {
             "description": "No Content"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       },
@@ -184,8 +112,8 @@
         "tags": [
           "Employees"
         ],
-        "summary": "Delete an employee",
-        "description": "Enter the Employee ID <p> **WARNING:** The contact will be permanently removed from the database.<p>",
+        "summary": "Remove an employee by ID",
+        "description": "Enter the Employee ID <p> **WARNING:** The employee will be permanently removed from the database.<p>",
         "parameters": [
           {
             "name": "id",
@@ -197,12 +125,6 @@
         "responses": {
           "204": {
             "description": "No Content"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
